# django-google-indexer

./: .gitignore  example_api_usage.py  example_email_indexing_usage.py  example_maintenance_usage.py  pyproject.toml
google_email_indexer/: admin.py  apps.py  email_indexing_service.py  message_sync_service.py  models.py  service.py  tasks.py
google_email_indexer/management/commands/: download-configured-messages.py  download-messages.py  index_email_addresses.py  list-messages.py  maintain_email_index.py  refresh-mbox-data.py  show-config.py
google_email_indexer/migrations/: 0001_initial.py  0002_indexedemailaddress_messageemailaddress_and_more.py  0003_alter_indexedemailaddress_first_seen_and_more.py  0004_alter_indexedemailaddress_first_seen_and_more.py  0005_messsagesource.py  0006_googlemailmessage_original_message_id_and_more.py
sample_site/: asgi.py  settings.py  urls.py  wsgi.py
