[project]
name = "django-google-indexer"
version = "0.1.0"
description = ""
authors = [
    {name = "Kaj Siebert",email = "kaj@k-si.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "django-environ>=0.11.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.20.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "rich>=13.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
